--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -516,7 +516,7 @@ h2{
 }
 
 .card1 {
-    margin-top: 2%;
+    margin-top: 20%;
     background-color: rgba(162, 162, 162, 0.647);
     backdrop-filter: blur(6px);
     box-shadow: 10px 10px 10px rgba(87, 87, 87, 0.46);
@@ -665,13 +665,17 @@ h2{
     }
 
     .introS1{
-        font-size: 9px;
+        font-size: 6px;
         margin: 0;
         height: 50px;
     }
 
     .introS1 h2{
         font-size: 10px;
+    }
+
+    .introS1 h3{
+        font-size: 8px;
     }
     #pfp{
         width: 30%;
@@ -685,8 +689,8 @@ h2{
     .en {
         scroll-snap-align: start;
         flex: 0 0 auto; 
-        width: 50%;
-        background-color: black;
+        width: 60%;
+        height: 80px;
         border-radius: 10px;
         margin: 5px;
         padding: 10px;
@@ -694,7 +698,7 @@ h2{
         transition: transform 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease;
     }
     .en img, .en .fa-solid, .en .fa-regular{
-        width: 10px;
+        width: 20px;
         font-size: 10px;
     }
 
