--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -366,25 +366,22 @@ h2{
     height: auto;
     justify-self: center;
 }
-
-.projCont{
+.projCont {
     margin-top: 4%;
     display: flex;
     width: 100%;
     margin-bottom: 6%;
 }
 
-.left{
-    display: flex;
-    flex-wrap: wrap; 
+.left {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* 3 columns */
+    grid-template-rows: repeat(2, auto);   /* 2 rows */
+    gap: 16px;
     width: 60%;
-    gap: 16px; 
 }
 
 .leftItems {
-    flex: 1 1 200px; 
-    min-width: 100px; 
-    box-sizing: border-box;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -392,12 +389,16 @@ h2{
     border-radius: 12px;
     cursor: pointer;
     background: rgb(255, 255, 255);
-        transition: 
+    transition: 
         background 0.3s ease,
         box-shadow 0.3s ease,
         transform 0.3s ease;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
 }
-.leftItems p{
+
+.leftItems p {
     color: #010005;
 }
 
@@ -406,7 +407,7 @@ h2{
     transform: translateY(-2px) scale(1.01);
 }
 
-.leftItems img{
+.leftItems img {
     width: 45%;
     max-width: 200px;
     border-radius: 10px;
@@ -414,27 +415,28 @@ h2{
     margin-right: 4%;
 }
 
-.leftItems:active{
+.leftItems:active {
     background: #000000;
     box-shadow: 0 8px 24px rgba(225, 225, 225, 0.18);
     transform: translateY(-2px) scale(1.01);
     border: 1.5px solid white;
 }
 
-.leftItems:active p{
+.leftItems:active p {
     color: #ffffff;
 }
 
-.leftItems.highlight{
+.leftItems.highlight {
     background: #000000;
     box-shadow: 0 8px 24px rgba(225, 225, 225, 0.18);
     transform: translateY(-2px) scale(1.01);
     border: 1.5px solid white;
 }
 
-.leftItems.highlight p{
+.leftItems.highlight p {
     color: #ffffff;
 }
+
 
 .right{
     margin: 0 auto;
@@ -628,7 +630,6 @@ h2{
     nav {
         margin: 0;
         padding: 10px 5px;
-        width: max-content;
         white-space: nowrap;
         justify-content: center;
     }
