--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -732,13 +732,50 @@ h2{
         flex-direction: column;
     }
     .left{
-        justify-self: center;
-        justify-content: center;
         width: 100%;
         height: 10%;
     }
+    .leftItems{
+        width: 100%;
+        border-radius: 8px;
+        flex-direction: column;
+        text-align: center;
+        padding: 15%;
+    }
+    .leftItems img{
+        width: 35%;
+        border-radius: 5px;
+    }
+    .leftItems p{
+        font-size: 85%;
+    }
     .right{
-        display: none;
+        margin-top: 5%;
+        width: 100%;
+        height: auto;
+    }
+    .rightItems #imgId{
+        width: 40%;
+        height: 40%;
+    }
+    #descId {
+        display: -webkit-box;
+        -webkit-line-clamp: 4; /* Approx. 4 lines × ~20 chars = ~80 chars */
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-height: 5.6em; /* 4 lines × 1.4em line-height */
+        line-height: 1.4em;
+        font-size: 10px;
+    }
+
+    #titleId{
+        font-size: 18px;
+    }
+    #linkId{
+        font-size: 14px;
+        padding: 0;
+        height: 40px;
     }
     .card1 h2{
         font-size: 18px;
