--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -199,11 +199,25 @@ h2{
     display: flex;
     flex-direction: row;
     overflow-x: scroll;
+    white-space: nowrap; 
+    cursor: grab;
+    user-select: none;
     scroll-behavior: smooth;
     scroll-snap-type: x mandatory;
     -webkit-overflow-scrolling: touch;
     scrollbar-width: none; 
 }
+.environment.dragging {
+  cursor: grabbing;
+  user-select: none;
+}
+
+.environment img {
+  pointer-events: none;
+  user-drag: none;
+  -webkit-user-drag: none;
+}
+
 
 .environment::-webkit-scrollbar {
     display: none; 
